completed adding a ul with list to my hello-world

--- a/hello-world.html
+++ b/hello-world.html
@@ -7,5 +7,10 @@
 <body>
     <h1>Hello, World!</h1>
     <p>Howdy! Welcome to Codeup!</p>
+    <ul>
+        <li>Red</li>
+        <li>Green</li>
+        <li>Blue</li>
+    </ul>
 </body>
 </html>
