practicing HTML with exercises1

--- a/Working With Data Types, Operators, and Variables.html
+++ b/Working With Data Types, Operators, and Variables.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Working With Data Types, Operators, and Variables</title>
@@ -11,9 +11,9 @@
             <li>Brother Bear (for 5 days, they love it),</li>
             <li>Hercules (1 day, you don't know yet if they're going to like it)</li>
         </ul>
-      <p>If price for a movie per day is $3, how much will you have to pay?</p>
     </p>
-    <p>
+    <p>If price for a movie per day is $3, how much will you have to pay?
+        <p>
         var lm = 3<br>
         var bb = 5<br>
         var h = 1<br>
@@ -21,6 +21,7 @@
         total = cost * (lm + bb + h)<br>
         return total
         total = 27
+        </p>
     </p>
     <p>
         Suppose you're working as a contractor for 3 companies:<br>
@@ -52,8 +53,8 @@
         The class is not full and the class schedule does not conflict with her current schedule.<br>
     </p>
     <p>
-        var classSchedule = true
-        var classFull = false
+        var classSchedule = true<br>
+        var classFull = false<br>
         const studentCan = classSchedule && !classFull
     </p>
     <p>
