internal external js exercise

--- a/internalexternal/internal.html
+++ b/internalexternal/internal.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>internal/external JS</title>
 </head>
 <body>
+    <h1>I'm learning internal/external JS</h1>
+
+    <script type="text/javascript">
+        "use strict"
+        console.log("Hello from inline JavaScript!")
+    </script>
+
+    <script src="js/external.js"></script>
 
 </body>
 </html>
