fixed js directory2

--- a/js/inline_js.html
+++ b/js/inline_js.html
@@ -13,7 +13,7 @@
         console.log("Hello from inline JavaScript!")
     </script>
 
-    <script src="external.js"></script>
+    <script src="js/external.js"></script>
 
 </body>
 </html>
