--- a/welcome.html
+++ b/welcome.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello</title>
 </head>
 <body>
+<p>Hello, World!</p>
 </body>
 </html>
