welcome.html & github.html finished

--- a/github.html
+++ b/github.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>GitHub</title>
 </head>
 <body>
+<img src="images/github-logo.png" alt="github Logo" width="30" height="30"/>
+<ul>
+    <li><u><a href=""> Pull requests</a></u></li>
+    <li><u><a href ="">Issues</a></u></li>
+    <li><u><a href ="">Marketplace</a></u></li>
+    <li><u><a href ="">Explore</a></u></li>
+</ul>
+<img src="images/codeup-duck-logo.png" alt="Codeup logo with a duck" width="50" height="50">
+<h3>Codeup</h3>
+<ul>
+    <li><u><a href="">Repos</a></u></li>
+    <li><u><a href ="">People</a></u></li>
+    <li><u><a href ="">Teams</a></u></li>
+    <li><u><a href ="">Projects</a></u></li>
+    <li><u><a href ="">Settings</a></u></li>
+</ul>
+<p>Codeup's dev team</p>
+<img src="images/duck1.png" width="50" height="50">
+<u><a href ="">Kent Beck</a></u><br>
+Kent Beck<br>
+Member<br>
+X team members <br>
+<img src="images/duck3.jpg" width="50" height="50">
+<u><a href="">Codeup Staff</a></u><br>
+Codeup Staff <br>
+Member<br>
+X team members<br>
+<img src="images/duck7.jpg" width="50"  height="50">
+<u><a href="">Martin F</a></u><br>
+MartinF<br>
+Member<br>
+X Team Members<br>
+© 2018 Github, Inc.<br>
+<u><a href="">Terms</a></u>
+<u><a href="">Privacy</a></u>
+<u><a href="">Security</a></u>
+<u><a href="">Status</a></u>
+<u><a href="">Help</a></u><br>
+<u><a href="">Contact</a></u>
+<u><a href="">API</a></u>
+<u><a href="">Training</a></u>
+
+
+
 
 </body>
 </html>
