--- a/welcome.html
+++ b/welcome.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Veridian Dynamics</title>
 </head>
 <body>
-<p>Hello, World!</p>
+<h1>Welcome to Veridian Dynamics!</h1>
+<p>At Veridian Dynamics, <b>we</b> solver <em>your</em> problems with <em><b>technology</b></em> </p>
+<hr>
+<p><h2>Core Values</h2></p>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<p><h2>Our Process</h2></p>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<p><h2>2020 Vision</h2></p>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 30%</li>
+</ul>
+<hr>
+<p><h2>Company Vision</h2></p>
+<img src="images/welder.jpg" width="400" height="300">
+<img src="images/silicon-wafer.jpg" width="300" height="300"><br>
+<img src="images/duck-computer.avif" width="400" height="300">
+<img src="images/robots-welding.png" width="300" height="300">
+
+<p><h2>Our Product</h2></p>
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Basic Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table><br>
+
+<em>All products come with our quality guarantee™</em><br>
+<a href="#top">Back to top of page</a>
 </body>
 </html>
