welcome.html & github.html finished

--- a/welcome.html
+++ b/welcome.html
@@ -30,7 +30,7 @@
 <p><h2>Company Vision</h2></p>
 <img src="images/welder.jpg" width="400" height="300">
 <img src="images/silicon-wafer.jpg" width="300" height="300"><br>
-<img src="images/duck-computer.avif" width="400" height="300">
+<img src="images/duck-computer.jpg" width="400" height="300">
 <img src="images/robots-welding.png" width="300" height="300">
 
 <p><h2>Our Product</h2></p>
