welcome.html & github.html links fixed

--- a/github.html
+++ b/github.html
@@ -7,19 +7,19 @@
 <body>
 <img src="images/github-logo.png" alt="github Logo" width="30" height="30"/>
 <ul>
-    <li><u><a href=""> Pull requests</a></u></li>
-    <li><u><a href ="">Issues</a></u></li>
-    <li><u><a href ="">Marketplace</a></u></li>
-    <li><u><a href ="">Explore</a></u></li>
+    <li><a href="https://github.com/pulls"> Pull requests</a></li>
+    <li><a href ="https://github.com/issues">Issues</a></li>
+    <li><a href ="https://github.com/marketplace">Marketplace</a></li>
+    <li><a href ="https://github.com/explore">Explore</a></li>
 </ul>
 <img src="images/codeup-duck-logo.png" alt="Codeup logo with a duck" width="50" height="50">
 <h3>Codeup</h3>
 <ul>
-    <li><u><a href="">Repos</a></u></li>
-    <li><u><a href ="">People</a></u></li>
-    <li><u><a href ="">Teams</a></u></li>
-    <li><u><a href ="">Projects</a></u></li>
-    <li><u><a href ="">Settings</a></u></li>
+    <li><u><a href="https://github.com/orgs/CodeupClassroom/repositories" target="_blank">Repos</a></u></li>
+    <li><u><a href ="https://github.com/orgs/CodeupClassroom/people" target="_blank">People</a></u></li>
+    <li><u><a href ="https://github.com/orgs/CodeupClassroom/teams" target="_blank">Teams</a></u></li>
+    <li><u><a href ="https://github.com/orgs/CodeupClassroom/projects?query=is%3Aopen" target="_blank">Projects</a></u></li>
+    <li><u><a href ="https://github.com/settings/" target="_blank">Settings</a></u></li>
 </ul>
 <p>Codeup's dev team</p>
 <img src="images/duck1.png" width="50" height="50">
@@ -28,7 +28,7 @@ Kent Beck<br>
 Member<br>
 X team members <br>
 <img src="images/duck3.jpg" width="50" height="50">
-<u><a href="">Codeup Staff</a></u><br>
+<u><a href="https://github.com/orgs/CodeupClassroom/teams/codeup-staff" target="_blank">Codeup Staff</a></u><br>
 Codeup Staff <br>
 Member<br>
 X team members<br>
@@ -38,17 +38,14 @@ MartinF<br>
 Member<br>
 X Team Members<br>
 © 2018 Github, Inc.<br>
-<u><a href="">Terms</a></u>
-<u><a href="">Privacy</a></u>
-<u><a href="">Security</a></u>
-<u><a href="">Status</a></u>
+<u><a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service" target="_blank">Terms</a></u>
+<u><a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank">Privacy</a></u>
+<u><a href="https://github.com/security" target="_blank">Security</a></u>
+<u><a href="https://www.githubstatus.com/" target="_blank">Status</a></u>
 <u><a href="">Help</a></u><br>
-<u><a href="">Contact</a></u>
-<u><a href="">API</a></u>
-<u><a href="">Training</a></u>
-
-
-
+<u><a href="https://support.github.com/?tags=dotcom-footer" target="_blank">Contact</a></u>
+<u><a href="https://docs.github.com/en" target="_blank">API</a></u>
+<u><a href="https://github.com/services/" target="_blank">Training</a></u>
 
 </body>
 </html>
