welcome.html & github.html title logo

--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+    <link rel = "icon" href ="images/VD-LOGO.png" type = "image/jpg">
 </head>
 <body>
 <h1>Welcome to Veridian Dynamics!</h1>
