--- a/github.html
+++ b/github.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub</title>
+    <link rel = "icon" href =
+            "images/github-logo.png"
+          type = "image/jpg">
 </head>
 <body>
 <img src="images/github-logo.png" alt="github Logo" width="30" height="30"/>
