welcome.html & github.html title logo2

--- a/github.html
+++ b/github.html
@@ -3,35 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub</title>
-    <link rel = "icon" href =
-            "images/github-logo.png"
-          type = "image/jpg">
+    <link rel = "icon" href = "images/github-logo.png" type = "image/jpg">
 </head>
 <body>
 <img src="images/github-logo.png" alt="github Logo" width="30" height="30"/>
 <ul>
-    <li><a href="https://github.com/pulls"> Pull requests</a></li>
-    <li><a href ="https://github.com/issues">Issues</a></li>
-    <li><a href ="https://github.com/marketplace">Marketplace</a></li>
-    <li><a href ="https://github.com/explore">Explore</a></li>
+    <li><a href="https://github.com/pulls" target="_blank"> Pull requests</a></li>
+    <li><a href ="https://github.com/issues" target="_blank">Issues</a></li>
+    <li><a href ="https://github.com/marketplace" target="_blank">Marketplace</a></li>
+    <li><a href ="https://github.com/explore" target="_blank">Explore</a></li>
 </ul>
 <img src="images/codeup-duck-logo.png" alt="Codeup logo with a duck" width="50" height="50">
 <h3>Codeup</h3>
 <ul>
-    <li><u><a href="https://github.com/orgs/CodeupClassroom/repositories" target="_blank">Repos</a></u></li>
-    <li><u><a href ="https://github.com/orgs/CodeupClassroom/people" target="_blank">People</a></u></li>
-    <li><u><a href ="https://github.com/orgs/CodeupClassroom/teams" target="_blank">Teams</a></u></li>
-    <li><u><a href ="https://github.com/orgs/CodeupClassroom/projects?query=is%3Aopen" target="_blank">Projects</a></u></li>
-    <li><u><a href ="https://github.com/settings/" target="_blank">Settings</a></u></li>
+    <li><a href="https://github.com/orgs/CodeupClassroom/repositories" target="_blank">Repos</a></li>
+    <li><a href ="https://github.com/orgs/CodeupClassroom/people" target="_blank">People</a></li>
+    <li><a href ="https://github.com/orgs/CodeupClassroom/teams" target="_blank">Teams</a></li>
+    <li><a href ="https://github.com/orgs/CodeupClassroom/projects?query=is%3Aopen" target="_blank">Projects</a></li>
+    <li><a href ="https://github.com/settings/" target="_blank">Settings</a></li>
 </ul>
 <p>Codeup's dev team</p>
 <img src="images/duck1.png" width="50" height="50">
-<u><a href ="">Kent Beck</a></u><br>
+<a href ="">Kent Beck</a><br>
 Kent Beck<br>
 Member<br>
 X team members <br>
 <img src="images/duck3.jpg" width="50" height="50">
-<u><a href="https://github.com/orgs/CodeupClassroom/teams/codeup-staff" target="_blank">Codeup Staff</a></u><br>
+<a href="https://github.com/orgs/CodeupClassroom/teams/codeup-staff" target="_blank">Codeup Staff</a><br>
 Codeup Staff <br>
 Member<br>
 X team members<br>
@@ -39,6 +37,7 @@ X team members<br>
 <u><a href="">Martin F</a></u><br>
 MartinF<br>
 Member<br>
+</table>
 X Team Members<br>
 © 2018 Github, Inc.<br>
 <u><a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service" target="_blank">Terms</a></u>
