--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Welcome to Veridian Dynamics!</h1>
-<p>At Veridian Dynamics, <b>we</b> solver <em>your</em> problems with <em><b>technology</b></em> </p>
+<p>At Veridian Dynamics, <b>we</b> solve <em>your</em> problems with <em><b>technology</b></em> </p>
 <hr>
 <p><h2>Core Values</h2></p>
 <ul>
