--- a/github.html
+++ b/github.html
@@ -23,21 +23,28 @@
     <li><a href ="https://github.com/settings/" target="_blank">Settings</a></li>
 </ul>
 <p>Codeup's dev team</p>
-<img src="images/duck1.png" width="50" height="50">
-<a href ="">Kent Beck</a><br>
-Kent Beck<br>
-Member<br>
-X team members <br>
-<img src="images/duck3.jpg" width="50" height="50">
-<a href="https://github.com/orgs/CodeupClassroom/teams/codeup-staff" target="_blank">Codeup Staff</a><br>
-Codeup Staff <br>
-Member<br>
-X team members<br>
-<img src="images/duck7.jpg" width="50"  height="50">
-<u><a href="">Martin F</a></u><br>
-MartinF<br>
-Member<br>
-</table>
+    <table>
+        <tr>
+            <td><img src="images/duck1.png" width="50" height="50"></td>
+            <td><a href ="">Kent Beck</a></td>
+            <td>Kent Beck</td>
+            <td>Member</td>
+            <td>X team members</td>
+        </tr>
+        <tr>
+            <td><img src="images/duck3.jpg" width="50" height="50"></td>
+            <td><a href="https://github.com/orgs/CodeupClassroom/teams/codeup-staff" target="_blank">Codeup Staff</a></td>
+            <td>Codeup Staff </td>
+            <td>Member</td>
+            <td>X team members</td>
+        </tr>
+        <tr>
+            <td><img src="images/duck7.jpg" width="50"  height="50"></td>
+            <td><a href="">Martin F</a></td>
+            <td>MartinF</td>
+            <td>Member</td>
+        </tr>
+    </table>
 X Team Members<br>
 © 2018 Github, Inc.<br>
 <u><a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service" target="_blank">Terms</a></u>
