--- a/welcome.html
+++ b/welcome.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
     <link rel = "icon" href ="images/VD-LOGO.png" type = "image/jpg">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<h1>Welcome to Veridian Dynamics!</h1>
+<h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
 <p>At Veridian Dynamics, <b>we</b> solve <em>your</em> problems with <em><b>technology</b></em> </p>
 <hr>
 <p><h2>Core Values</h2></p>
