cinco de mayo js warmup

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -5,6 +5,6 @@
     <title>Warmups</title>
 </head>
 <body>
-<script src="js/warmups.js"></script>
+<script src="js/js-warmups.js"></script>
 </body>
 </html>
