missing assignments fix1

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="UTF-8">
+	<title>Flexbox Navigation Exercise</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+	<link rel="stylesheet" href="css/flexbox-nav-exercise.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-$END$
+	<nav>
+		<div class="left">
+			<ul>
+				<li><a href="#articles">Articles</a></li>
+				<li><a href="#products">Products</a></li>
+				<li><a href="#market">Market</a></li>
+				<li><a href="#jobs">Jobs</a></li>
+			</ul>
+		</div>
+		<h3 class="title">Logo</h3>
+		<div class="right">
+			<ul>
+				<li><a href="#">Follow Us</a></li>
+				<li><a href="#" class="fa-solid fa-magnifying-glass"></a></li>
+				<li><a href="#" class="fa-solid fa-cart-shopping"></a></li>
+				<li><a href="#" class="fa-solid fa-circle-user"></a></li>
+			</ul>
+		</div>
+	</nav>
 </body>
 </html>
