--- a/flexbox-cards.html
+++ b/flexbox-cards.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox cards</title>
-    <!-- TODO: You have a better structure in local your folder, move the following file and change the link path so it's being saved in the css folder -->
-    <link rel="stylesheet" href="flexbox-cards.css">
+    <link rel="stylesheet" href="css/flexbox-cards.css">
 </head>
 <body>
 <div class="container">
