--- a/order-pizza.html
+++ b/order-pizza.html
@@ -1,36 +1,274 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Panucci's Pizza</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-<nav class="nav">
-	<div>
-		<ul class="nav">
-			<li><a href="#" class="list">Panucci's Pizza</a></li>
-			<li><a href="#" class="list">Order Online</a></li>
-			<li><a href="#" class="list">Menu</a></li>
-			<li><a href="#" class="list">Search stores near you!</a></li>
-			<li><a href="#" class="sign">Sign up!</a></li>
-		</ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">Panucci's Pizza</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Order Online</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Menu</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-user"></i>  Sign up!</a>
+				</li>
+				
+			</ul>
+			<form class="d-flex">
+				<input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
+				<button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		</div>
 	</div>
 </nav>
+
 <div class="jumbotron">
-		<div class="welcome bg-white p-2 text-dark bg-opacity-25 ">Welcome to Panucci's Pizza!
+		<div class="welcome bg-white p-2 text-dark bg-opacity-75 ">Welcome to Panucci's Pizza!
 		</div>
-<div>
-
-</div>
 </div>
 
-<!-- Main page content -->
+<h2 class="mt-5">Build Your Own Pizza!</h2>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<!-- Your custom JS goes here -->
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+	<li class="nav-item" role="presentation">
+		<button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+			<i class="bi bi-1-circle"></i> Size and Crust</button>
+	</li>
+	<li class="nav-item" role="presentation">
+		<button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"><i class="bi bi-2-circle"></i>
+			Cheese and Sauce</button>
+	</li>
+	<li class="nav-item" role="presentation">
+		<button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false"><i class="bi bi-3-circle"></i> Toppings</button>
+	</li>
+</ul>
+
+<div class="tab-content">
+	<div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+		<div class="card bg-white mb-3">
+			<div class="card-header text-white bg-primary">Choose Size and Crust</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Hand Tossed
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							Garlic seasoned crust with a rich, buttery taste.
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="radio" name="selectSize" id="smClassic">
+							<label class="form-check-label" for="smClassic">
+								Small (10")
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="radio" name="selectSize" id="medClassic">
+							<label class="form-check-label" for="medClassic">
+								Medium (12")
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Crispy Thin
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							Thin enough for optimum crispy to crunchy ratio.
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="radio" name="selectSize" id="medThin">
+							<label class="form-check-label" for="medThin">
+								Medium (12")
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="radio" name="selectSize" id="lgThin">
+							<label class="form-check-label" for="lgThin">
+								Large (14")
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-footer bg-light">
+				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+					<button class="btn btn-primary me-md-2" type="button">Next Step ></button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+		<div class="card bg-white mb-3">
+			<div class="card-header text-white bg-primary">Choose Cheese and Sauce</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Cheese
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							How much?
+						</li>
+						<li class="list-group-item">
+							<select class="form-select">
+								<option>Light</option>
+								<option>Normal</option>
+								<option>Extra</option>
+								<option selected>Double</option>
+							</select>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Sauce
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							What type?
+						</li>
+						<li class="list-group-item">
+							<select class="form-select">
+								<option selected>Tomato</option>
+								<option>Marinara</option>
+								<option>BBQ</option>
+								<option>Alfredo</option>
+							</select>
+						</li>
+						<li class="list-group-item">
+							How much?
+						</li>
+						<li class="list-group-item">
+							<select class="form-select">
+								<option>Light</option>
+								<option selected>Normal</option>
+								<option>Extra</option>
+							</select>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-footer bg-light d-md-flex justify-content-md-end">
+				<div class="btn-group" role="group" aria-label="Basic example">
+					<button type="button" class="btn btn-primary">< Previous</button>
+					<button type="button" class="btn btn-primary">Next ></button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+		<div class="card bg-white mb-3">
+			<div class="card-header text-white bg-primary">Choose Toppings</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Choose Meats
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="pepperoni">
+							<label class="form-check-label" for="pepperoni">
+								Pepperoni
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="sausage">
+							<label class="form-check-label" for="sausage">
+								Sausage
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="ham">
+							<label class="form-check-label" for="ham">
+								Ham
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="philly">
+							<label class="form-check-label" for="philly">
+								Philly Steak
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="bacon">
+							<label class="form-check-label" for="bacon">
+								Bacon
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-body">
+				<div class="card">
+					<div class="card-header">
+						Choose Non-Meats
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="peppers">
+							<label class="form-check-label" for="peppers">
+								Green Peppers
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="mushrooms">
+							<label class="form-check-label" for="mushrooms">
+								Mushrooms
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="onions">
+							<label class="form-check-label" for="onions">
+								Onions
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="jalapeno">
+							<label class="form-check-label" for="jalapeno">
+								Pineapple
+							</label>
+						</li>
+						<li class="list-group-item">
+							<input class="form-check-input me-1" type="checkbox" name="meats" id="spinach">
+							<label class="form-check-label" for="spinach">
+								Spinach
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="card-footer bg-light">
+				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+					<button class="btn btn-primary me-md-2" type="button">Checkout <i class="bi bi-cart-check"></i></i></button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
