defuse BOM & dom query

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -14,24 +14,27 @@
   (function() {
     "use strict";
 
-    var detonationTimer = 5;
+    let detonationTimer = 5;
 
     // TODO: This function needs to be called once every second
     function updateTimer() {
-      if (detonationTimer == 0) {
+      if (detonationTimer === 0) {
         alert('EXTERMINATE!');
         document.body.innerHTML = '';
+        clearInterval(myInterval);
       } else if (detonationTimer > 0) {
         document.getElementById('timer').innerHTML = detonationTimer;
       }
-
       detonationTimer--;
     }
+
+    let interval = 1000;
+    let myInterval = setInterval(updateTimer, interval);
 
     // TODO: When this function runs, it needs to
     // cancel the interval/timeout for updateTimer()
     function defuseTheBOM() {
-
+      clearInterval(myInterval);
     }
 
     // Don't modify anything below this line!
@@ -39,8 +42,9 @@
     // This causes the defuseTheBOM() function to be called
     // when the "defuser" button is clicked.
     // We will learn about events in the DOM lessons
-    var defuser = document.getElementById('defuser');
+    let defuser = document.getElementById('defuser');
     defuser.addEventListener('click', defuseTheBOM);
+
   })();
 </script>
 </body>
