--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,7 +24,10 @@
 	pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 	culpa qui officia deserunt mollit anim id est laborum.
 </p>
-
+<button id="btn1">Click Me!</button>
+<button id="btn2">Click Me!</button>
+<button id="btn3">Click Me!</button>
+<button id="btn4">Click Me!</button>
 <script>
 	(function() {
 		"use strict";
@@ -32,34 +35,57 @@
 		let mainHeader = document.getElementById("main-header");
 
 		// TODO: Set inner html of mainHeader to "JavaScript is Cool"
-		mainHeader.innerHTML = "JavaScript is Cool"
+		let listener1 = function (event) {
+			mainHeader.innerHTML = "JavaScript is Cool";
+		}
+		document.getElementById('btn1').addEventListener('click', listener1);
 
 		// TODO: Uncomment the next line and get the sub header element by id
 		let subHeader = document.getElementById("sub-header");
 
-		// TODO: Set the text color of subHeader to blue
-		subHeader.style = "color: blue";
+		let listener2 = function (event) {
+			subHeader.style = "color: blue";
+		}
+		document.getElementById('btn2').addEventListener('click', listener2);
+
 
 		// TODO: Uncomment the next line and get all list items
 		let listItems = document.getElementsByTagName("li");
 
 		// TODO: Set text color on every other list item to grey
 		// TODO: Set text color of li with dbid = 1 to blue
-		for(let i = 0; i < listItems.length; i++){
-			if(i % 2 !== 0){
+
+		let listener3 = function (event) {
+
+			for (let i = 0; i < listItems.length; i++) {
+				if (i % 2 !== 0) {
 					listItems[i].style = "color: grey";
-			}
-			if(listItems[i].getAttribute("data-dbid") === "1"){
+				}
+				if (listItems[i].getAttribute("data-dbid") === "1") {
 					listItems[i].style = "color: blue";
+				}
 			}
 		}
 
+		document.getElementById('btn3').addEventListener('click', listener3);
 		// TODO: Uncomment the next line and get all elements with class name sub-paragraph
 		let subParagraphs = document.getElementsByClassName("sub-paragraph");
 
 		// TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-		subParagraphs[0].innerHTML = "Mission Accomplished!";
+		let listener4 = function (event) {
+			subParagraphs[0].innerHTML = "Mission Accomplished!";
+		}
+		document.getElementById('btn4').addEventListener('click', listener4);
+
+
+
 	})();
+
+
+
+
+
+
 
 </script>
 </body>
