konami & jQuery FAQ

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1></h1>
+<h1>TESTING123</h1>
 <div class="important">
 	<h3 class="warning" >NOTICE</h3>
 		<h5>There's a snake in your boot!</h5>
