--- a/konami.html
+++ b/konami.html
@@ -1,10 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>This is my Konami Website</title>
+
+  <!-- CSS & JQ -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/konami.css"/>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
 </head>
 <body>
-$END$
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+
+            Dropdown
+
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+<!-- John Info -->
+<section id="hero">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Hi,<br>I am John</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
+        <button type="button" class="btn btn-dark btn-lg">Book a Skype Call</button>
+      </div>
+      <div class="col">
+        <img src="images/john.jpg">
+      </div>
+    </div>
+    <div class="row cards">
+      <div class="col-md-4 d-flex justify-content-center">
+        <div class="card">
+          <div class="card-body">
+            <img src="images/js.jpg" alt="..." class="icon">
+            <h5 class="card-title">Skills</h5>
+            <p class="card-text">Tutored a young Brendan Eich on how to code, who would go on to later develop JavaScript</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center">
+        <div class="card">
+          <div class="card-body">
+            <img src="images/google.jpg" alt="..." class="icon">
+            <h5 class="card-title">Experience</h5>
+            <p class="card-text">Created and developed the algorithm that would become Google.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center">
+        <div class="card">
+          <div class="card-body">
+            <img src="images/johnsproject.jpg" alt="..." class="icon">
+            <h5 class="card-title">Projects</h5>
+            <p class="card-text">Was the first chimpanzee in documented history to write Hamlet on a typewriter</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- About John -->
+<section id="about-us">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col">
+        <img src="images/johnsfamily.jpg" alt="..." class="img-fluid"/>
+      </div>
+      <div class="col">
+        <h1>About Me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
+        <button type="button" class="btn btn-dark btn-lg">Hire me!</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End of About Us -->
+
+<script>
+	"use strict";
+
+	let theKonamiCode = [
+		"ArrowUp",
+		"ArrowUp",
+		"ArrowDown",
+		"ArrowDown",
+		"ArrowLeft",
+		"ArrowRight",
+		"ArrowLeft",
+		"ArrowRight",
+		"b",
+		"a",
+		"Enter"
+	];
+	let konamiCodeProg = 0;
+
+	$(document).keyup(function (e) {
+		if (e.key === theKonamiCode[konamiCodeProg]) {
+			konamiCodeProg++;
+
+			if (konamiCodeProg === theKonamiCode.length) {
+				$('body').empty();
+				$('body').css('background', 'url(images/johnbreak.jpg)');
+				$('body').css('background-size', 'cover');
+				konamiCodeProg = 0;
+			}
+		} else {
+			konamiCodeProg = 0;
+		}
+	});
+</script>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
