--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>US National Parks</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<style>
 		body{
 			background-color: saddlebrown;
-			color: #CCC5B9;
 		}
 		h1{
 			text-align: center;
 			background-color: #403D39;
+			color: #CCC5B9;
 		}
 		dt{
 			font-size: 2rem;
@@ -22,48 +23,60 @@
 			font-size: 1.5rem;
 			margin: 1em;
 		}
+		li{
+			list-style: none;
+		}
+
 		.highlighted{
 			background-color: #795C5F;
-			color: black;
+			color: #31231E;
 		}
 	</style>
 	<!-- <link rel="stylesheet" href="css/konami.css"/> added an external css just in case-->
 </head>
 <body>
 
-<h1>US National Parks</h1>
+<h1>US National Parks FAQs</h1>
 
 <dl>
-	<dt>Who is the director of the National Park Service?</dt>
-	<dd>Charles F. "Chuck" Sams III is the Director of the National Park Service.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">Who is the director of the National Park Service?</button></dt>
+		<dd>Charles F. "Chuck" Sams III is the Director of the National Park Service.</dd>
 
-	<dt>What government agency oversees the National Park Service?</dt>
-	<dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">What government agency oversees the National Park Service?</button></dt>
+		<dd>The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.</dd>
 
-	<dt>How many employees are in the National Park Service?</dt>
-	<dd>Permanent, temporary, and seasonal employees: Approximately 20,000 as well as nearly 300,000 volunteers</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How many employees are in the National Park Service?</button></dt>
+		<dd>Permanent, temporary, and seasonal employees: Approximately 20,000 as well as nearly 300,000 volunteers</dd>
 
-	<dt>How old is the National Park System?</dt>
-	<dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How old is the National Park System?</button></dt>
+		<dd>The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park.</dd>
 
-	<dt>What is the origin of the National Park Service arrowhead?</dt>
-	<dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">What is the origin of the National Park Service arrowhead?</button></dt>
+		<dd>The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values.</dd>
 
-	<dt>How many areas are in the National Park System?</dt>
-	<dd>1869 railroad construction features, walk or drive on the original railroad grade, and get an up close view of Victorian era replica locomotives.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How many areas are in the National Park System?</button></dt>
+		<dd>1869 railroad construction features, walk or drive on the original railroad grade, and get an up close view of Victorian era replica locomotives.</dd>
 
-	<dt>How many areas are in the National Park System?</dt>
-	<dd>The system includes 424 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How many areas are in the National Park System?</button></dt>
+		<dd>The system includes 424 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House.</dd>
 
-	<dt>How many people visit the national parks?</dt>
-	<dd>In 2022, the total number of recreation visits to the national parks was 311,985,998.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How many people visit the national parks?</button></dt>
+		<dd>In 2022, the total number of recreation visits to the national parks was 311,985,998.</dd>
 
-	<dt>What is the National Park Service budget?</dt>
-	<dd>FY 2017 Enacted: $2.932 billion</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">What is the National Park Service budget?</button></dt>
+		<dd>FY 2017 Enacted: $2.932 billion</dd>
 
-	<dt>How do I make reservations for camping/lodging in national parks?</dt>
-	<dd>For campground reservations, visit Recreation.gov. Not all parks participate in this service; many campgrounds are first come, first served. For more information on specific camping and lodging services offered at the park(s) of your interest, please check specific park websites. You can also learn more about camping in national parks and find a map of parks with camping opportunities.</dd>
+	<dt><button type="button" class="btn btn-secondary btn-lg">How do I make reservations for camping/lodging in national parks?</button></dt>
+		<dd>For campground reservations, visit Recreation.gov. Not all parks participate in this service; many campgrounds are first come, first served. For more information on specific camping and lodging services offered at the park(s) of your interest, please check specific park websites. You can also learn more about camping in national parks and find a map of parks with camping opportunities.</dd>
 </dl>
+<ul>
+	<li><button type="button" class="btn btn-secondary btn-lg toggle-all">Toggle All Answers</button></li>
+</ul>
+
+
+<!-- SCRIPTS -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 <script>
 	$(document).ready(function() {
@@ -73,7 +86,12 @@
 
 		$('dt').click(function() {
 			$(this).next('dd').toggle();
-			$(this).toggleClass('highlighted');
+			$(this).next('dd').toggleClass('highlighted');
+		});
+
+		$('.toggle-all').click(function() {
+			$('dd').toggle();
+			$('dd').toggleClass('highlighted');
 		});
 	});
 </script>
