forgot the last list of park facts

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -90,17 +90,17 @@
 	<li>Home to Guadalupe Peak</li>
 	<li>Highest point in Texas</li>
 	<li>he Mescalero Apaches occupied the mountains through the mid-19th century</li>
-	<li>the Guadalupe Mountains violet, is a rare flower that is endemic to the park.</li>
+	<li>the Guadalupe Mountains violet, is a rare flower that is endemic to the park</li>
 	<li>They have Peregrine Falcons here, my favorite bird</li>
 </ul>
 
 <h3>Makoshika of Montana</h3>
 <ul id="makoshika-montana">
-	<li></li>
-	<li>Lone Pine</li>
-	<li>Somers Beach</li>
-	<li>Thompson Falls</li>
-	<li>Pirogue Island</li>
+	<li>from the Lakota Maco sica, meaning 'bad land' or 'land of bad spirits'</li>
+	<li>Dinosaur fossils discovered in and near the park include examples of Triceratops and Thescelosaurus</li>
+	<li>Turkey vultures, prairie falcons, and golden eagles make a home in the park</li>
+	<li>It is the largest of Montana's state parks at more than 11,000 acres</li>
+	<li>Events include the annual "Buzzard Day" celebration</li>
 </ul>
 
 
