parks faq after walkthrough

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -30,7 +30,7 @@
 
 		.highlighted{
 			background-color: yellow;
-			color: #403D39
+			color: #403D39 /*Can't get the font to change colors :(*/
 		}
 
 		.parks{
@@ -157,7 +157,9 @@
 	$(document).ready(function() {
 
 		$('#highlight-button').click(function () {
-			$('ul li:last-child').css('background-color', 'yellow');
+			$('ul').each(function(){
+				$(this).find('li').last().addClass('highlighted')
+			})
 		});
 
 		$('h3').click(function() {
