--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -3,9 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ajax Blog</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<style>
+		body {
+			background-color: #35465C;
+		}
+		div{
+			background-color: white;
+			border-radius: 5px;
+			padding: .5em;
+			margin: 1em;
+		}
+		p{
+			background-color: white;
+			padding: 1em;
+		}
+		.ml-1 {
+			margin-left: 1em;
+			font-size: 2rem;
+			color: white;
+			background-color: #35465C;
+		}
+
+	</style>
 </head>
 <body>
+<nav class="navbar justify-content-between">
+	<a class="navbar-brand ml-1">tumblr</a>
+	<form class="form-inline">
+		<input class="form-control mr-sm searchbox" type="search" placeholder="Search Tumblr" aria-label="Search">
 
+	</form>
+</nav>
 <div id="posts">
 </div>
 
@@ -21,24 +50,31 @@
 		});
 
 		function addToTable(data){
-			let div = document.getElementById("posts");
+			let container = document.getElementById("posts");
 			data.forEach(function(item){
 
-				let row = document.createElement("tr");
-				let title = document.createElement("td");
+				let div = document.createElement("div");
+				let title = document.createElement("h3");
 				title.textContent = item.title;
-				let content = document.createElement("td");
-				content.textContent = item.content
-				let category = document.createElement("td");
-				category.textContent = item.categories.join(", ");
-				let date = document.createElement("td");
-				date.textContent = item.date;
+				let content = document.createElement("p");
+				content.textContent = item.content;
+				let category = document.createElement("p");
+				category.textContent = "Categories: " + item.categories.join(", ");
+				let date = document.createElement("p");
+				date.textContent = "Date: " + item.date;
 
-				row.appendChild(title);
-				row.appendChild(content);
-				row.appendChild(category);
-				row.appendChild(date);
-				div.appendChild(row);
+				// container.classList.add("card-body")
+				// div.classList.add("card-title")
+				title.classList.add("font-bold");
+				content.classList.add("fs-6");
+
+				div.appendChild(title);
+				div.appendChild(date);
+				div.appendChild(content);
+				div.appendChild(category);
+
+
+				container.appendChild(div);
 			});
 		};
 	})();
