forgot a few semi-colons

--- a/js/ajax-store.html
+++ b/js/ajax-store.html
@@ -38,7 +38,7 @@
 				let title = document.createElement("td");
 					title.textContent = item.title;
 				let quantity = document.createElement("td");
-					quantity.textContent = item.quantity
+					quantity.textContent = item.quantity;
 				let price = document.createElement("td");
 					price.textContent = item.price;
 				let category = document.createElement("td");
@@ -47,7 +47,7 @@
 				title.classList.add("bg-primary");
 				quantity.classList.add("bg-warning");
 				price.classList.add("bg-success");
-				category.classList.add("bg-danger")
+				category.classList.add("bg-danger");
 
 				row.appendChild(title);
 				row.appendChild(quantity);
